# typantic

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  publish.yml
examples/typantic_demo/: README.md  pyproject.toml
examples/typantic_demo/src/typantic_demo/: __init__.py
scripts/: gen_types.py
src/typantic/: __init__.py  _cli.py  _config_file.py  _decorator.py  _introspect.py
src/typantic/web/: __init__.py  api.py  cli.py  discovery.py  endpoint.py  filesystem.py  gallery.py  launcher.py  models.py  schema.py  security.py  server.py  store.py
src/typantic/web/backends/: __init__.py  apptainer.py  base.py  container.py  local.py  pbs.py  process.py  registry.py  scheduler.py  slurm.py  ssh.py
tests/: test_cli.py  test_config_file.py  test_decorator.py
tests/web/: test_api.py  test_discovery.py  test_endpoint.py  test_gallery.py  test_launcher.py  test_models.py  test_schema.py  test_server.py  test_store.py  test_web_cli.py  test_web_import.py
tests/web/backends/: test_process.py  test_registry.py  test_schedulers.py  test_wrapped.py
tests/web/fixtures/: toy_app.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  api.ts  index.css  store.ts  types.ts
web/src/components/: JobDetail.tsx  Jobs.tsx  Launch.tsx  NewProjectInput.tsx  PathWidget.tsx  Projects.tsx  Section.tsx  rjsfTemplates.tsx  ui.tsx
