[project]
name = "typantic"
version = "0.5.0"
description = "Type-safe interfaces from Pydantic v2 models: Typer CLIs, plus an optional FastAPI web launcher + dashboard."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Kilian Schnelle", email = "kilian.schnelle@kischnelle.dev" },
]
keywords = [
    "typer",
    "pydantic",
    "pydantic-v2",
    "cli",
    "pydantic-cli",
    "typer-cli",
    "command-line",
    "argument-parsing",
    "validation",
    "config",
    "settings",
    "fastapi",
    "web",
    "dashboard",
    "job-launcher",
    "json-schema",
    "slurm",
    "pbs",
    "docker",
    "podman",
    "apptainer",
    "ssh",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Framework :: FastAPI",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Typing :: Typed",
]
dependencies = ["pydantic>=2.10", "pyyaml>=6.0", "typer>=0.27"]

[project.optional-dependencies]
# The web launcher/dashboard. The base install pulls none of these; `import
# typantic` never imports fastapi. Only `typantic[web]` (and `typantic.web`)
# does. Pillow powers the generic output-image gallery (pure imaging, no torch).
web = [
    "fastapi>=0.138",
    "uvicorn>=0.49",
    "websockets>=16",
    "pillow>=11",
]

[project.scripts]
typantic = "typantic._cli:main"

# Built-in launch backends for `typantic[web]`, discovered by the launcher.
# Third-party backends register under the same group.
[project.entry-points."typantic.web_backends"]
local = "typantic.web.backends.local:LocalBackend"
ssh = "typantic.web.backends.ssh:SshBackend"
slurm = "typantic.web.backends.slurm:SlurmBackend"
pbs = "typantic.web.backends.pbs:PbsBackend"
docker = "typantic.web.backends.container:docker_backend"
podman = "typantic.web.backends.container:podman_backend"
apptainer = "typantic.web.backends.apptainer:ApptainerBackend"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.22",
    "types-pyyaml>=6.0",
    # Exercise the [web] surface in the test suite so the 100% gate covers it.
    "fastapi>=0.138",
    "uvicorn>=0.49",
    "websockets>=16",
    "pillow>=11",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/KiSchnelle/typantic"
Repository = "https://github.com/KiSchnelle/typantic"
Issues = "https://github.com/KiSchnelle/typantic/issues"
Changelog = "https://github.com/KiSchnelle/typantic/blob/main/CHANGELOG.md"

[tool.coverage.run]
source = ["src/typantic"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "^\\s*\\.\\.\\.$",
]

[build-system]
requires = ["uv_build>=0.11.29,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "typantic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=typantic --cov-report=term-missing"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = [
    "TD003",
    "FIX002",
    "TD002",
    "TD004",
    "ERA001",
    "COM812",
    "TC002",
    "TC003",
]

[tool.ruff.lint.per-file-ignores]
# A runnable demo app: a deferred Pillow import and non-crypto randomness are
# fine, and it is a standalone project (not part of the typantic package).
"examples/**" = ["PLC0415", "S311", "INP001"]
# Typer commands legitimately use boolean flag options with defaults, and a
# serve command maps a settings model's worth of options onto flags.
"src/typantic/_cli.py" = ["FBT001", "FBT002"]
"src/typantic/web/cli.py" = ["FBT001", "FBT002", "PLR0913"]
"src/typantic/web/server.py" = ["PLR0913"]
# FastAPI's Depends()/Query()/Header() default idiom reads as a function call,
# and a route may legitimately expose a boolean query flag with a default.
"src/typantic/web/api.py" = ["B008", "FBT001", "FBT002"]
"tests/**" = [
    "S101",    # assert is fine in tests
    "D100",    # no module docstring needed
    "D101",    # no class docstring needed
    "D102",    # no method docstring needed
    "D103",    # no function docstring needed
    "D104",    # no package docstring needed
    "D107",    # no __init__ docstring needed
    "ANN",     # no type annotations needed
    "PLR2004", # magic values are fine in tests
    "PLR0913", # many-arg test helpers are fine
    "INP001",  # implicit namespace package is fine
    "ARG",     # unused args in fakes/stubs are fine
    "EM101",   # string-literal exceptions are fine in tests
    "EM102",
    "TRY003",  # long exception messages are fine in tests
    "SLF001",  # accessing private members under test is fine
    "S108",    # hardcoded /tmp paths are fine in tests
    "S106",    # hardcoded test tokens/passwords are fine
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
strict = true
exclude = '(?:^|/)(tests|manual_tests|dist)(?:/|$)'

[tool.pyright]
ignore = ["tests/**", "manual_tests/**", "dist/**"]
typeCheckingMode = "strict"
