[project]
name = "typantic-demo"
version = "0.0.0"
description = "A tiny demo typantic[web] app (docs / screenshots / a runnable example)."
requires-python = ">=3.12"
dependencies = ["typantic", "pillow>=11", "typer>=0.26", "pydantic>=2.10"]

[project.scripts]
typantic-demo = "typantic_demo:main"

# So `typantic web serve` discovers these commands.
[project.entry-points."typantic.web_commands"]
typantic-demo = "typantic_demo:WEB_COMMANDS"

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "typantic_demo"
